--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: black;
+}
+
+body, input {
+  color: white;
 }
